# tzzero-http

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: api.md  architecture.md  development.md  performance.md
examples/: README.md  hello_world.cpp  rest_api.cpp  static_files.cpp  websocket_echo.cpp
include/tzzero/core/: epoll_poller.h  event_loop.h  poller.h  timer_queue.h
include/tzzero/http/: http_parser.h  http_request.h  http_response.h  http_server.h
include/tzzero/net/: acceptor.h  event_loop_thread_pool.h  tcp_connection.h  tcp_server.h
include/tzzero/utils/: buffer.h  logger.h  memory_pool.h  thread_pool.h
src/: main.cpp
src/core/: epoll_poller.cpp  event_loop.cpp  poller.cpp  timer_queue.cpp
src/http/: http_parser.cpp  http_request.cpp  http_response.cpp  http_server.cpp
src/net/: acceptor.cpp  event_loop_thread_pool.cpp  tcp_connection.cpp  tcp_server.cpp
src/utils/: buffer.cpp  logger.cpp  thread_pool.cpp
tests/: buffer_test.cpp  http_parser_test.cpp  http_request_test.cpp  http_response_test.cpp  logger_test.cpp  memory_pool_test.cpp  thread_pool_test.cpp
tools/: benchmark.cpp
